<resources>
    <string name="app_name">WITH</string>
    <string name="app_name_en">with</string>
    <string name="app_developer">ⓒ k x x c n</string>
    <string name="app_topic">admin</string>
    <string name="app_topic_debug" translatable="false">admin_debug</string>
    <string name="email_address">kxxcn.dev@gmail.com</string>
    <string name="email_subject">[WITH] Contact us</string>
    <string name="email_text">Device: %1$s\nOS: %2$d\nVersion: %3$s\n\n\n</string>
    <string name="ad_id">ca-app-pub-1655234429103343~9006659424</string>
    <string name="ad_unit_id">ca-app-pub-1655234429103343/4743625569</string>
    <string name="ad_unit_test_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="push_title">With</string>
    <string name="title">WITH</string>
    <string name="title_write">WRITE</string>
    <string name="title_you">YOU</string>
    <string name="title_me">ME</string>
    <string name="title_setting">SETTING</string>
    <string name="hint_write">Record important memories.</string>
    <string name="hint_plan">Please enter a date.</string>
    <string name="hint_time">Please enter the time.</string>
    <string name="hint_place">Please enter a location.</string>
    <string name="hint_date">Please enter the date.</string>
    <string name="hint_my_nickname">Enter my nickname.</string>
    <string name="hint_your_nickname">Enter your nickname for loved ones.</string>
    <string name="hint_alias">Please enter a nickname.</string>
    <string name="hint_gender">Please enter my gender.</string>
    <string name="hint_name">Please enter your name.</string>
    <string name="hint_phone">Please enter your phone number.</string>
    <string name="format_date">%s-%s-%s</string>
    <string name="format_date2">%s-%s-%s</string>
    <string name="format_month">%s</string>
    <string name="format_year_month">%s-%s</string>
    <string name="format_time_set1">%d%s</string>
    <string name="format_time_set2">%d:%s%s</string>
    <string name="format_failed_request">%s : %s</string>
    <string name="format_current">Current version : %s</string>
    <string name="format_latest">Latest version : %s</string>
    <string name="btn_primary">Background</string>
    <string name="btn_gallery">Photo</string>
    <string name="btn_font">Font</string>
    <string name="btn_color">Color</string>
    <string name="btn_male">Male</string>
    <string name="btn_female">Female</string>
    <string name="btn_signup">Start</string>
    <string name="btn_auth">Authentication</string>
    <string name="btn_registration">Save</string>
    <string name="btn_solo">Send alone</string>
    <string name="btn_couple">Write like</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete_contents">Do you want to cancel writing? The contents being created are not saved.</string>
    <string name="dialog_delete_diary">Do you want to delete the diary?</string>
    <string name="dialog_delete_plan">Do you want to delete the schedule?</string>
    <string name="dialog_delete_day">Do you want to delete the D-Day?</string>
    <string name="dialog_want_to_quit">Do you want to exit WITH?</string>
    <string name="dialog_want_to_sign_out">All recorded data will be deleted. \nDo you want to leave [WITH]?</string>
    <string name="dialog_delete_lock">Do you want to release the lock function?</string>
    <string name="dialog_use_alone">Do you write alone?</string>
    <string name="dialog_use_together">Do you write together?</string>
    <string name="dialog_review_message">Is WITH useful to you?\nPlease leave a review for other users.\n\nwe expect your good evaluation :D</string>
    <string name="toast_checking_album">The album is being inquired.</string>
    <string name="toast_choice_gender">Please select a gender.</string>
    <string name="toast_check_auth_number">Check the authentication number.</string>
    <string name="toast_input_auth_number">Please enter your authorization number.</string>
    <string name="toast_invalid_auth_number">Invalid authentication number.</string>
    <string name="toast_write_diary">Write a diary.</string>
    <string name="toast_register_diary">A new diary has been registered.</string>
    <string name="toast_register_plan">A new schedule has been registered.</string>
    <string name="toast_input_plan">Select a plan.</string>
    <string name="toast_input_all">Please enter all items.</string>
    <string name="toast_choice_gallery">Please select a photo.</string>
    <string name="toast_search_version">Querying version information.</string>
    <string name="toast_exceeded_character">The number of characters has been exceeded.</string>
    <string name="toast_invalid_password">Passwords do not match.</string>
    <string name="toast_complete_sync">Synchronization is complete.</string>
    <string name="toast_failed_registration_plan">Certain registrations failed. Please try again later.</string>
    <string name="toast_error_width">Certain registrations failed. Please try again later.</string>
    <string name="toast_not_available_feature">That function is not available.</string>
    <string name="toast_delete_diary">The diary has been deleted.</string>
    <string name="toast_update_diary">The diary has been corrected.</string>
    <string name="toast_delete_plan">The schedule has been deleted.</string>
    <string name="toast_update_plan">The schedule has been changed.</string>
    <string name="toast_agree">Please agree to the collection and use of personal information.</string>
    <string name="toast_failed_registration_entry">I failed to apply. Please try again later.</string>
    <string name="toast_registration_entry">Applied.</string>
    <string name="toast_already_registration_entry">I have already applied.</string>
    <string name="toast_changed_profile_image">Your profile photo has been changed.</string>
    <string name="toast_changed_nickname">Nickname changed.</string>
    <string name="toast_failed_request_day">Failed to read the D-Day information.</string>
    <string name="toast_success_diary_share">Saved in the album.</string>
    <string name="toast_sign_out_greeting">Thank you for using [WITH].</string>
    <string name="snack_selected_gallery">A photo was selected.</string>
    <string name="system_setting">Configuration</string>
    <string name="system_denied_permission">"If you deny permission, you will not be able to use this service. \n\nPlease turn on permission in Settings > Permissions."</string>
    <string name="system_denied_location_permission">"If you deny permission, you will not be able to get location information. \n\nPlease turn on permission in Settings > Permissions."</string>
    <string name="text_welcome">Welcome everyone who visits WITH.</string>
    <string name="text_auth">Enter the number given to your lover. \n\nOr tell your girlfriend your authentication number.</string>
    <string name="text_auth2">Enter the number given to your lover.</string>
    <string name="text_delete">DELETE</string>
    <string name="text_account">Account</string>
    <string name="text_lock">Lock mode</string>
    <string name="text_profile">Edit profile</string>
    <string name="text_notification">Notification</string>
    <string name="text_notice_with">WITH notification</string>
    <string name="text_notify">Notification</string>
    <string name="text_notice_event">Receive event information</string>
    <string name="text_service">Service information</string>
    <string name="text_notice">Notice</string>
    <string name="text_information">Information</string>
    <string name="text_contact">Contact</string>
    <string name="text_sync">Sync</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_latest">Using the latest version</string>
    <string name="text_update">Update</string>
    <string name="text_clause">Terms of service</string>
    <string name="text_policy">Personal information processing policy</string>
    <string name="text_license">Open source license</string>
    <string name="text_failure_load_version">Unable to get version information.</string>
    <string name="text_location">From %s</string>
    <string name="text_somewhere">somewhere</string>
    <string name="text_from">From</string>
    <string name="text_font">FONT</string>
    <string name="text_nickname">Let\'s change the couple nickname.</string>
    <string name="text_alias">Change the title at the top with another name.</string>
    <string name="text_blur">Please blur the photo.</string>
    <string name="text_count">%d / %d</string>
    <string name="text_keyboard_0">0</string>
    <string name="text_keyboard_1">1</string>
    <string name="text_keyboard_2">2</string>
    <string name="text_keyboard_3">3</string>
    <string name="text_keyboard_4">4</string>
    <string name="text_keyboard_5">5</string>
    <string name="text_keyboard_6">6</string>
    <string name="text_keyboard_7">7</string>
    <string name="text_keyboard_8">8</string>
    <string name="text_keyboard_9">9</string>
    <string name="text_input_password">Please enter your password.</string>
    <string name="text_input_password_more">Please enter your password again.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_day_registration">D-Day</string>
    <string name="text_day_content">Please enter your content.</string>
    <string name="label_mon">MON</string>
    <string name="label_tue">TUE</string>
    <string name="label_wed">WED</string>
    <string name="label_thu">THU</string>
    <string name="label_fri">FRI</string>
    <string name="label_sat">SAT</string>
    <string name="label_sun">SUN</string>
    <string name="analysis_mon">M</string>
    <string name="analysis_tue">T</string>
    <string name="analysis_wed">W</string>
    <string name="analysis_thu">T</string>
    <string name="analysis_fri">F</string>
    <string name="analysis_sat">S</string>
    <string name="analysis_sun">S</string>
    <string name="param_download_image_url">%s%s.jpg</string>
    <string name="param_geocode">%e,%e</string>
    <string name="notification_name_notice">Notification</string>
    <string name="notification_name_admin">Notice</string>
    <string name="text_with">WITH</string>
    <string name="text_timeline">Timeline</string>
    <string name="text_records">Records</string>
    <string name="text_diary">Dairy</string>
    <string name="text_recently_plan">Recent plans</string>
    <string name="text_plan_date_time">%s %s</string>
    <string name="text_decimal_day_minus">D%d</string>
    <string name="text_decimal_day_plus">D+%d</string>
    <string name="text_decimal_day">D-Day</string>
    <string name="text_timeline_date">%d/%d</string>
    <string name="text_not_exist_time_information">There is no time information.</string>
    <string name="text_plan">Plan</string>
    <string name="text_dday">D-Day</string>
    <string name="text_write">Writing</string>
    <string name="text_setting">Settings</string>
    <string name="text_register">Registration</string>
    <string name="text_register_plan">Create plan</string>
    <string name="text_register_place">Location registration</string>
    <string name="text_register_date">Day registration</string>
    <string name="text_plan_count_this_month">%1$s Plan(%2$d)</string>
    <string name="text_plan_date">%1$d</string>
    <string name="text_not_exist_plan">There is no registered plan.</string>
    <string name="text_about">ABOUT</string>
    <string name="text_support">SUPPORT</string>
    <string name="text_splash_title">W I T H</string>
    <string name="text_splash_content">We are together</string>
    <string name="transition_bg" translatable="false">transition_bg</string>
    <string name="transition_icon" translatable="false">transition_icon</string>
    <string name="transition_title" translatable="false">transition_title</string>
</resources>